--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -29,4 +29,4 @@ nav74neet:
   location:     Bangalore
   website:      "http://nav74neet.github.io/"
   github:       nav74neet
-  twitter:      "https://twitter.com/nav74neet"
+  linkedin:     "https://www.linkedin.com/in/navneet-paul-94a806101/"
