--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,7 +6,7 @@ default:
   bio:          Robotics & Machine Learning Researcher
   location:     Bangalore
   website:      "http://nav74neet.github.io/about"
-  email:        "navneetpaul@iisc.ac.in"
+  email:        navneetpaul@iisc.ac.in
   twitter:
   resume:       true
   linkedin:
