--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,7 +10,7 @@ default:
   twitter:
   resume:       true
   linkedin:
-  googlescholar:
+  # googlescholar:
   xing:
   github:       nav74neet
   stackoverflow:
@@ -31,4 +31,4 @@ nav74neet:
   website:      "http://nav74neet.github.io/"
   github:       nav74neet
   linkedin:     "https://www.linkedin.com/in/navneet-paul-94a806101/"
-  googlescholar: "https://scholar.google.co.in/citations?user=Wbz-jYwAAAAJ&hl=en"
+  # googlescholar: "https://scholar.google.co.in/citations?user=Wbz-jYwAAAAJ&hl=en"
