--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 title:            Navneet Paul
 subtitle:
 description:      Navneet's Personal Website.
-keywords:         robotics reinforcement learning imitation learning machine learning artificial intelligence
+keywords:         robotics, reinforcement learning, imitation learning, machine learning, artificial intelligence,
 language:         "en"
 baseurl:          ""
 url:              "http://nav74neet.github.io/"
