--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@ default:
   name:         "Navneet Paul"
   cover:        /assets/iisc_2.jpeg
   picture:      /assets/nav.png
-  bio:          Robotics & Machine Learning Researcher
+  bio:          Masters Student @UTwente | Robotics & Machine Learning Researcher.
   location:     Bangalore
   website:      "http://nav74neet.github.io/about"
   email:        navneetpaul@student.utwente.nl
