--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 default:
   initial:      nav74neet
   name:         "Navneet Paul"
-  cover:        /assets/iisc_2.jpeg
+  cover:        /assets/wall.png
   picture:      /assets/navu.jpg
   bio:          Masters Student @UTwente | Robotics & Machine Learning Researcher.
   location:     Bangalore
